# itsfergus

./: .dockerignore  .prettierignore  .renovaterc.json  010_cloudtrail_error_query.sh  Dockerfile  README.md  README2.md  api_gateway.tf  apitest-iam.hurl  apitest-iam.sh  apitest-key.hurl  apitest-key.sh  apitest.py  apitest_iam.py  apitest_iam_debug.py  apitest_key.py  apitestbash-iam.sh  app.py  check-all-kms-grants.sh  check-api-throttling.sh  check-errors.sh  check-kms-grants.sh  check-kms-metrics.sh  check-lambda.sh  check-quotas.sh  check-throttling.sh  check_cloudtrail.sh  check_cloudtrail_all.sh  check_cloudtrail_errors.sh  cleanup_kms_grants.sh  curl-test2  ecr.tf  iam.tf  justfile  kms-analysis-json.sh  kms-analysis.sh  kms-fix.sh  kms-fix.tf  kms-fix2.sh  kms-fix3.sh  (+16 more)
auth_iam/: api_gateway.tf  iam.tf  outputs.tf  variables.tf
auth_key/: api_gateway.tf  outputs.tf  variables.tf
